add name, email and secret-number in db also leave a hello message if user.cookie exists

--- a/templates/result.html
+++ b/templates/result.html
@@ -9,7 +9,7 @@
         {{ nachricht }}<br><br><br>
     </div>
     <div>
-        <a href="/">Weiter versuchen</a>
+        <a href="/game">Weiter versuchen</a>
     </div>
 </div>
 
