--- a/templates/result2.html
+++ b/templates/result2.html
@@ -9,7 +9,7 @@
         {{ nachricht }}<br><br><br>
     </div>
     <div>
-        <a href="/">Ein neues Spiel starten? Klick mich...</a>
+        <a href="/game">Ein neues Spiel starten? Klick mich...</a>
     </div>
 </div>
 
