added hashlib and uuid

--- a/templates/index2.html
+++ b/templates/index2.html
@@ -20,6 +20,7 @@
         <form method="post" action="/login">
             <input type="text" name="user-name" placeholder="Dein Name"><br><br>
             <input type="email" name="user-email" placeholder="Deine E-Mail Adresse"><br><br>
+            <input type="password" name="user-password" placeholder="Dein Passwort">
             <button type="submit">Submit</button>
         </form>
     </div>
