added change password and edit profile etc

--- a/templates/base.html
+++ b/templates/base.html
@@ -18,6 +18,10 @@
 <div class="stil">
     <div class="abstand"><h1>* * * Z A H L E N - R A T E - S P I E L * * *</h1></div>
 
+    <div>
+        <p><a href="/game">Spielen</a> | <a href="/profile">Profil</a> | <a href="/users">Alle Nutzer</a></p>
+    </div>
+
     <div class="abstand">
         {% block content %}
         {% endblock content %}
