--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,7 @@
 
 <div>
     <div class="abstand">
-        Errate die geheime Zahl...<br><br>
+        Errate die geheime Zahl zwischen 1 und 50...<br><br>
     </div>
     <div class="abstand">
         <form method="post" action="/result">
