--- a/templates/index2.html
+++ b/templates/index2.html
@@ -20,8 +20,8 @@
         <form method="post" action="/login">
             <input type="text" name="user-name" placeholder="Dein Name"><br><br>
             <input type="email" name="user-email" placeholder="Deine E-Mail Adresse"><br><br>
-            <input type="password" name="user-password" placeholder="Dein Passwort">
-            <button type="submit">Submit</button>
+            <input type="password" name="user-password" placeholder="Dein Passwort"><br><br>
+            <button type="submit">Speichern</button>
         </form>
     </div>
 </div>
